--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 decorator==3.4.2
+matplotlib==1.4.3
+mock==1.0.1
 networkx==1.9.1
+nose==1.3.4
 numpy==1.9.2
 pandas==0.16.0
 psycopg2==2.6
+pyparsing==2.0.3
 python-dateutil==2.4.1
 pytz==2015.2
 six==1.9.0
